--- a/ComputerHardwareInventoryManager/ComputerHardwareInventoryManager.csproj
+++ b/ComputerHardwareInventoryManager/ComputerHardwareInventoryManager.csproj
@@ -79,5 +79,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="SQL Scripts\CompHardwareInventoryDBScript.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
