Added the helper

--- a/ComputerHardwareInventoryManager/ComputerHardwareInventoryManager.csproj
+++ b/ComputerHardwareInventoryManager/ComputerHardwareInventoryManager.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\HardwareProduct.cs" />
+    <Compile Include="DB Classes\DBHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
