Renamed HardwareContext from Model1

--- a/ComputerHardwareInventoryManager/ComputerHardwareInventoryManager.csproj
+++ b/ComputerHardwareInventoryManager/ComputerHardwareInventoryManager.csproj
@@ -62,7 +62,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\HardwareProduct.cs" />
-    <Compile Include="Model1.cs" />
+    <Compile Include="HardwareContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
